# advent-of-code-2021

./: Makefile  pyproject.toml
.github/workflows/: ci.yml
cmd/day1/: main.go  main_test.go
cmd/day2/: main.go
cmd/day3/: main.go  main_test.go
days1-3/: go.mod
days1-3/cmd/day1/: main.go  main_test.go
days1-3/cmd/day3/: main.go
days1-3/cmd/day4/: main.go  main_test.go
days1-3/internal/comparators/: comparators.go
days1-3/internal/converters/: converters.go  converters_test.go
days1-3/internal/counters/: counters_test.go
days1-3/internal/files/: files.go
days1-3/internal/structures/: matrix.go  matrix_test.go
internal/comparators/: comparators_test.go
internal/converters/: converters.go  converters_test.go
internal/counters/: counters.go
internal/structures/: twodim.go  twodim_test.go
pydays/day10/: solution.py  test_solution.py
pydays/day11/: solution.py  test_solution.py
pydays/day4/: input.py  solution.py  test_solution.py
pydays/day5/: solution.py  test_solution.py
pydays/day6/: solution.py  test_solution.py
pydays/day7/: solution.py  test_solution.py
pydays/day8/: solution.py  test_solution.py
pydays/day9/: solution.py  test_solution.py
